...
                Navigator.pushReplacementNamed(context, '/home');
              }
            },
          ),
          ListTile(
            leading: Icon(Icons.tv),
            title: Text('TV Series'),
            selected: currentRoute == HomeTvPage.ROUTE_NAME,
            onTap: () {
              if (currentRoute == HomeTvPage.ROUTE_NAME) {
                Navigator.pop(context);
              } else {
                Navigator.pushReplacementNamed(context, HomeTvPage.ROUTE_NAME);
              }
            },
          ),
          ListTile(
            leading: Icon(Icons.save_alt),
            title: Text('Watchlist'),
            selected: currentRoute == WatchlistPage.ROUTE_NAME,
            onTap: () {
              Navigator.pushNamed(context, WatchlistPage.ROUTE_NAME);
            },
          ),
          ListTile(
...
